external-crates/move/crates/move-compiler/tests/move_check/parser/cast_other_types.snap
error[E04003]: built-in operation not supported
  ┌─ tests/move_check/parser/cast_other_types.move:4:10
  │
4 │         (0 as ());
  │          ^    -- Found: '()'. But expected: 'u8', 'u16', 'u32', 'u64', 'u128', 'u256'
  │          │     
  │          Invalid argument to 'as'

error[E04003]: built-in operation not supported
  ┌─ tests/move_check/parser/cast_other_types.move:5:10
  │
5 │         (0 as &u64);
  │          ^    ---- Found: '&u64'. But expected: 'u8', 'u16', 'u32', 'u64', 'u128', 'u256'
  │          │     
  │          Invalid argument to 'as'

