external-crates/move/crates/move-compiler/tests/move_check/parser/cast_other_types.move
module a::m {
    fun t() {
        // we only allow numeric types
        (0 as ());
        (0 as &u64);
    }
}
